It does generate client now